# mdns-tui-browser

./: .coderabbit.yaml  .gitignore  Cargo.toml  README.md  typos.toml
.github/: release-drafter.yml  renovate.json5
.github/actions/latest-release-info/: action.yml
.github/actions/setup-rust-cache/: action.yml
.github/actions/setup-sccache/: action.yml
.github/workflows/: asset-checksums-reusable.yml  aur-reusable.yml  build-reusable.yml  bump-version.yml  ci.yml  lint-reusable.yml  publish.yml  release-drafter.yml  source-checksums-reusable.yml  test-reusable.yml
packaging/aur/: generate-mdns-tui-browser.sh  makepkg-lint.sh
src/: main.rs  tui_app.rs
