[package]
name = "mdns-tui-browser"
version = "1.1.1"
edition = "2024"
rust-version = "1.85"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
panic = "abort"

[dependencies]
mdns-sd = "0.17"
tokio = { version = "1.0", features = ["full"] }
ratatui = "0.30"
crossterm = "0.29"
