[package]
name = "mdns-tui-browser"
version = "1.6.2"
edition = "2024"
rust-version = "1.85"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
debug = true
split-debuginfo = "packed"
strip = true

[dependencies]
mdns-sd = "0.17"
tokio = { version = "1.0", features = ["full"] }
ratatui = "0.30"
crossterm = "0.29"
flume = "0.12"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
